--- a/README
+++ b/README
@@ -20,3 +20,5 @@ todo...
 This is the very initial core of a smart and simple MAM (Media Asset Management) application (very web oriented) to help management an playout of complex television archtecture.
 
 Do you think Sky or Mediaset or BBC use undreds of people for every channel they broadcast? Now you could manage lot of channel playlist 
+
+(test)
