--- a/README
+++ b/README
@@ -10,6 +10,13 @@ Per gestire il tutto sarebbe impensabile replicare la "normale" catena produttiv
 Obiettivo principale per ora sara' quella di abilitare l'INGESTING dei programmi(film, documentari, serie ...) ed il loro SCHEDULING anche annuale.
 Inoltre si prevede di abilitare in tempi brevi una gestione embrionale della PROGRAMMAZIONE PUBBLICITARIA e ovviamente il modulo di PLAYBACK per i singoli canali.
 
+indispensabili:
+- Django 1.3+
+- Python 2.7+
+- Mysql 5.0+ (pass di root di default=otvaroot)
+- python-mysql (per windows scaricabile da www.codegood.com)
+
+
 todo...
 - Creazione automatica dei registri obbligatori di legge
 - interfacciamento con i programmi di fatturazione (gestionale open?)
